# Atlas

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/: CODEOWNERS
.github/workflows/: cmake-single-platform.yml
include/atlas/: Parser.h  downloader.h  filename_from_url.h  parser.h  write_data.h
include/atlas/command/: help.h  version.h
include/atlas/config/: create_config.h  read_config.h
src/: Parser.cpp  downloader.cpp  main.cpp  parser.cpp  write_data.cpp
src/command/: help.cpp  version.cpp
src/config/: create_config.cpp  read_config.cpp
tests/: config_tests.cpp  filename_from_url.cpp  parser_tests.cpp  write_data_tests.cpp
